LPS-112017 Fix horizontal scrollbar visual bug in pages with sidenav-content

--- a/modules/apps/frontend-theme/frontend-theme-admin/src/css/_custom.scss
+++ b/modules/apps/frontend-theme/frontend-theme-admin/src/css/_custom.scss
@@ -46,16 +46,4 @@ body {
 		margin-left: -($grid-gutter-width / 2);
 		margin-top: 20px;
 	}
-
-	.sidenav-container {
-		.sidenav-content {
-			@include media-breakpoint-up(sm) {
-				margin-right: -15px;
-			}
-		}
-
-		&.closed .sidenav-content {
-			margin-right: 0;
-		}
-	}
 }
